--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -53,8 +53,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>jakarta.json</artifactId>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.eclipse</groupId>
