--- a/jackson-support/pom.xml
+++ b/jackson-support/pom.xml
@@ -110,6 +110,13 @@
                     </instructions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkCount>0</forkCount> <!-- FIXME: -->
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
