--- a/jmsdk-bom/pom.xml
+++ b/jmsdk-bom/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>jmsdk</artifactId>
         <groupId>io.github.ma1uta.matrix</groupId>
-        <version>0.13.1</version>
+        <version>0.13.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jmsdk-bom</artifactId>
