--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.13.1</version>
+    <version>0.13.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
