--- a/jmsdk-bom/pom.xml
+++ b/jmsdk-bom/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>jmsdk</artifactId>
         <groupId>io.github.ma1uta.matrix</groupId>
-        <version>0.13.2-SNAPSHOT</version>
+        <version>0.14.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jmsdk-bom</artifactId>
@@ -29,22 +29,22 @@
     <description>Java-based Matrix server. All dependencies.</description>
 
     <properties>
-        <version.lib.jeon>0.13.1</version.lib.jeon>
+        <version.lib.jeon>0.14.0-SNAPSHOT</version.lib.jeon>
         <version.lib.commons-beanutils>1.9.4</version.lib.commons-beanutils>
         <version.lib.logback-classic>1.2.3</version.lib.logback-classic>
         <version.lib.slf4j-api>1.7.30</version.lib.slf4j-api>
-        <version.lib.jackson-bom>2.11.4</version.lib.jackson-bom>
+        <version.lib.jackson-bom>2.12.3</version.lib.jackson-bom>
+        <version.lib.jakarta.xml-bind>2.3.3</version.lib.jakarta.xml-bind>
         <version.lib.jakarta.json-api>2.0.0</version.lib.jakarta.json-api>
         <version.lib.jakarta.persistence-api>3.0.0</version.lib.jakarta.persistence-api>
         <version.lib.junit-bom>5.8.0-M1</version.lib.junit-bom>
         <version.lib.jersey-client>3.0.1</version.lib.jersey-client>
         <version.lib.jersey.hk2>3.0.1</version.lib.jersey.hk2>
         <version.lib.jersey-media-json-jackson>3.0.1</version.lib.jersey-media-json-jackson>
-        <version.lib.microprofile>3.3</version.lib.microprofile>
+        <version.lib.microprofile>4.0</version.lib.microprofile>
         <version.lib.mapstruct>1.4.2.Final</version.lib.mapstruct>
         <version.lib.yasson>2.0.2</version.lib.yasson>
-        <version.lib.jaxb-api>2.4.0-b180830.0359</version.lib.jaxb-api>
-        <version.lib.resteasy>4.5.12.Final</version.lib.resteasy>
+        <version.lib.resteasy>4.6.0.Final</version.lib.resteasy>
         <version.lib.wiremock>2.27.2</version.lib.wiremock>
         <version.lib.javax-annotation-api>1.3.2</version.lib.javax-annotation-api>
     </properties>
@@ -121,9 +121,9 @@
                 <version>${version.lib.jakarta.persistence-api}</version>
             </dependency>
             <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>${version.lib.jaxb-api}</version>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${version.lib.jakarta.xml-bind}</version>
             </dependency>
 
             <dependency>
