--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.13.2-SNAPSHOT</version>
+        <version>0.14.0-SNAPSHOT</version>
     </parent>
     <artifactId>jsonb-support</artifactId>
 
@@ -30,7 +30,7 @@
             <dependency>
                 <groupId>io.github.ma1uta.matrix</groupId>
                 <artifactId>jmsdk-bom</artifactId>
-                <version>0.13.2-SNAPSHOT</version>
+                <version>0.14.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -48,13 +48,13 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.json.bind</groupId>
-            <artifactId>javax.json.bind-api</artifactId>
+            <groupId>jakarta.json.bind</groupId>
+            <artifactId>jakarta.json.bind-api</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.eclipse</groupId>
